--- a/russian/mobile_app/cashier/Localizable.eng.strings
+++ b/russian/mobile_app/cashier/Localizable.eng.strings
@@ -14,7 +14,7 @@
 "ACTIVITY_VIEW_TEXT" = "Loading...";
 
 // screen titles locals
-"TITLE_CREDITS" = "Commissions";
+"TITLE_CREDITS" = "Comissions";
 "TITLE_QRCODE" = "Create";
 "TITLE_SETTINGS" = "Profile";
 
@@ -46,23 +46,23 @@
 "CREDIT_INFO_COMMENT" = "Comment";
 "CREDIT_INFO_COMMENT_OPTIONAL" = "Comment (optional)";
 
-"CREDIT_SAVED"  = "Commission saved";
+"CREDIT_SAVED"  = "Comission saved";
 
 "CREDIT_CANCEL" = "Cancel";
 "CREDIT_RESTORE" = "Restore";
 
 // settings locals
 "SETTINGS_LOGOUT_BTN_TITLE" = "Sign out";
-"SETTINGS_INFO_TEXT" = "Only administrator can modify theese settings.";
+"SETTINGS_INFO_TEXT" = "Only administrator can modify these settings.";
 
 "SETTINGS_CASHIER_ID" = "Cashier ID";
 "SETTINGS_CASHIER_NAME" = "Cashier name";
 "SETTINGS_CURRENCY" = "Currency";
-"SETTINGS_CREDIT_TYPE" = "Commission type";
+"SETTINGS_CREDIT_TYPE" = "Comission type";
 "SETTINGS_MERCHANT_NAME" = "Administrator";
 
 // comission
-"COMISSION_SCREEN_TITLE" = "commission";
+"COMISSION_SCREEN_TITLE" = "comission";
 
 // errors
 "ERROR" = "Ошибка";
@@ -70,7 +70,8 @@
 "ERROR_WRONG_LOGIN_PASSWORD" = "Invalid login or password.";
 "ERROR_SESSION_EXPIRED" = "Sign in failed. Please contact administrator.";
 "ERROR_EMPTY_QRCODE" = "Enter the QR-wallet number.";
-"ERROR_NO_CREDITS" = "You have no commissions yet.";
-
+"ERROR_WRONG_QRCODE" = "Invalid QR-wallet number.";
+"ERROR_NO_CREDITS" = "You have no comissions yet.";
+ 
 // scaner
 "SCANER_LABEL_TEXT" = "Point the camera at the QR-code";
